--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "lyrics-search-react",
   "version": "0.1.0",
+  "homepage": "https://SaiSamarth123.github.io/Lyrics-Search-React",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -44,6 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "gh-pages": "^5.0.0"
   }
 }
