--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "lyrics-search-react",
   "version": "0.1.0",
-  "homepage": "https://SaiSamarth123.github.io/Lyrics-Search-React",
+  "homepage": "https://saisamarth123.github.io/Lyrics-Search-React",
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -18,7 +18,8 @@
     "react-moment": "^1.1.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.82.0"
   },
   "scripts": {
     "predeploy": "npm run build",
